--- a/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
@@ -1,11 +1,7 @@
 <section class="page-header mb-3">
-	<div class="row g-0">
-		<div class="media col">
-			<div class="media-body">
-				<h1 skipTo>Cache Entries</h1>
-				View and manage user cache entries.
-			</div>
-		</div>
+	<div>
+		<h1 skipTo>Cache Entries</h1>
+		View and manage user cache entries.
 	</div>
 	<system-alert></system-alert>
 </section>
