--- a/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
+++ b/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
@@ -1,11 +1,7 @@
 <section class="page-header mb-3">
-	<div class="row g-0">
-		<div class="media col">
-			<div class="media-body">
-				<h1 skipTo>Audit Logs</h1>
-				Browse and search audit logs.
-			</div>
-		</div>
+	<div>
+		<h1 skipTo>Audit Logs</h1>
+		Browse and search audit logs.
 	</div>
 	<system-alert></system-alert>
 </section>
