--- a/src/app/core/teams/create-team/create-team.component.html
+++ b/src/app/core/teams/create-team/create-team.component.html
@@ -1,13 +1,11 @@
-<section class="p-3">
+<section>
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
 
 	<form role="form" autocomplete="off" novalidate #form="ngForm" (ngSubmit)="save()">
-		<div class="media col mb-4">
-			<div class="media-body">
-				<h2 skipTo>Create Team</h2>
-				Provide some basic metadata to create a new team
-			</div>
+		<div>
+			<h2 skipTo>Create Team</h2>
+			Provide some basic metadata to create a new team
 		</div>
 
 		<!-- Required Indicator -->
