--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -1,12 +1,8 @@
 @if (!embedded) {
 	<section class="page-header mb-3">
-		<div class="row g-0">
-			<div class="media col">
-				<div class="media-body">
-					<h1 skipTo>Teams</h1>
-					View and manage team membership and roles.
-				</div>
-			</div>
+		<div>
+			<h1 skipTo>Teams</h1>
+			View and manage team membership and roles.
 		</div>
 		<system-alert></system-alert>
 	</section>
