--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -1,11 +1,7 @@
 <section class="page-header mb-3">
-	<div class="row g-0">
-		<div class="media col">
-			<div class="media-body">
-				<h1 skipTo>EUAs</h1>
-				View and manage end user agreements.
-			</div>
-		</div>
+	<div>
+		<h1 skipTo>EUAs</h1>
+		View and manage end user agreements.
 	</div>
 	<system-alert></system-alert>
 </section>
