--- a/src/app/core/admin/user/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user/list-users/admin-list-users.component.html
@@ -1,11 +1,7 @@
 <section class="page-header mb-3">
-	<div class="row g-0">
-		<div class="media col">
-			<div class="media-body">
-				<h1 skipTo>Users</h1>
-				View and manage user accounts.
-			</div>
-		</div>
+	<div>
+		<h1 skipTo>Users</h1>
+		View and manage user accounts.
 	</div>
 	<system-alert></system-alert>
 </section>
