--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.scss
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.scss
@@ -1,22 +1,16 @@
 @import '../../../../styles/shared';
-
-:host {
-	& ::ng-deep .flyout-btn {
-		width: 118px;
-	}
-}
+@import '../../../../styles/bootstrap/shared';
 
 .feedback-form {
 	width: 550px;
 
 	form {
-		height: 100%;
 		overflow: auto;
-		padding: 2rem;
+		padding: $spacer * 2;
 	}
 }
 
 .feedback-ready {
-	background: var(--bs-body-bg) url('/assets/images/feedback-bg.png') no-repeat right 1rem;
+	background: url('/assets/images/feedback-bg.png') no-repeat right 1rem;
 	background-size: 219px 129px;
 }
