--- a/src/styles/_ng-select.scss
+++ b/src/styles/_ng-select.scss
@@ -7,7 +7,7 @@
 $ng-select-border-old: #ccc !default;
 $ng-select-highlight-old: #007eff !default;
 $ng-select-primary-text-old: #333 !default;
-$ng-select-selected-old: color.adjust($ng-select-highlight-old, $lightness: 46) !default;
+$ng-select-selected-old: color.adjust($ng-select-highlight-old, $lightness: 46%) !default;
 
 $ng-select-highlight: $input-focus-border-color !default;
 $ng-select-primary-text: var(--bs-body-color) !default;
@@ -33,7 +33,7 @@ $ng-select-dropdown-optgroup-text: var(--bs-body-color) !default;
 $ng-select-dropdown-optgroup-marked: $ng-select-dropdown-optgroup-text !default;
 $ng-select-dropdown-option-bg: $ng-select-dropdown-bg !default;
 $ng-select-dropdown-option-text: var(--bs-body-color) !default;
-$ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $lightness:60) !default;
+$ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $lightness: 60%) !default;
 
 .ng-select {
 	&.ng-select-opened {
@@ -41,10 +41,10 @@ $ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $
 			background: $ng-select-bg;
 			.ng-arrow {
 				top: -2px;
-				border-color: transparent transparent color.adjust($ng-select-border-old, $lightness: -20);
+				border-color: transparent transparent color.adjust($ng-select-border-old, $lightness: -20%);
 				border-width: 0 5px 5px;
 				&:hover {
-					border-color: transparent transparent color.adjust($ng-select-border-old, $lightness: -60);
+					border-color: transparent transparent color.adjust($ng-select-border-old, $lightness: -60%);
 				}
 			}
 		}
@@ -137,7 +137,7 @@ $ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $
 		&.ng-select-disabled {
 			> .ng-select-container .ng-value-container .ng-value {
 				background-color: $ng-select-disabled-bg;
-				border: 1px solid color.adjust($ng-select-border-old, $lightness:10);
+				border: 1px solid color.adjust($ng-select-border-old, $lightness: 10%);
 				.ng-value-label {
 					padding: 0 5px;
 				}
@@ -217,7 +217,7 @@ $ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $
 		}
 	}
 	.ng-clear-wrapper {
-		color: color.adjust($ng-select-border-old, $lightness: -20);
+		color: color.adjust($ng-select-border-old, $lightness: -20%);
 		&:hover .ng-clear {
 			color: #D0021B;
 		}
@@ -244,11 +244,11 @@ $ng-select-dropdown-option-disabled: color.adjust($ng-select-primary-text-old, $
 		}
 		&:hover {
 			.ng-arrow {
-				border-top-color: color.adjust($ng-select-border-old, $lightness: -40);
+				border-top-color: color.adjust($ng-select-border-old, $lightness: -40%);
 			}
 		}
 		.ng-arrow {
-			border-color: color.adjust($ng-select-border-old, $lightness: -20) transparent transparent;
+			border-color: color.adjust($ng-select-border-old, $lightness: -20%) transparent transparent;
 			border-style: solid;
 			border-width: 5px 5px 2.5px;
 		}
