style: adjust padding on cdkMenus to prevent border cutoff

--- a/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
@@ -44,7 +44,7 @@
 
 					<ng-template #actionsMenu>
 						<div
-							class="dropdown-menu py-0"
+							class="dropdown-menu"
 							id="cache-entry-{{ entry._id }}-action-menu"
 							attr.aria-labelledby="cache-entry-{{ entry._id }}-action-menu-btn"
 							cdkMenu
