--- a/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
@@ -108,7 +108,7 @@
 						</button>
 						<ng-template #statusMenu>
 							<div
-								class="dropdown-menu py-0"
+								class="dropdown-menu"
 								id="feedback-{{ feedback._id }}-status-menu"
 								attr.aria-labelledby="feedback-{{ feedback._id }}-status-menu-btn"
 								cdkMenu
@@ -159,7 +159,7 @@
 						</button>
 						<ng-template #assigneeMenu>
 							<div
-								class="dropdown-menu py-0"
+								class="dropdown-menu"
 								id="feedback-{{ feedback._id }}-assignee-menu"
 								attr.aria-labelledby="feedback-{{ feedback._id }}-assignee-menu-btn"
 								cdkMenu
