--- a/src/app/core/admin/user/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user/list-users/admin-list-users.component.html
@@ -110,7 +110,7 @@
 						</button>
 						<ng-template #actionsMenu>
 							<div
-								class="dropdown-menu py-0"
+								class="dropdown-menu"
 								id="user-{{ user._id }}-action-menu"
 								attr.aria-labelledby="user-{{ user._id }}-action-menu-btn"
 								cdkMenu
