--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -241,7 +241,7 @@
 
 			<ng-template #helpNav>
 				<div
-					class="nav-menu dropdown-menu py-0"
+					class="nav-menu dropdown-menu"
 					id="help-nav-menu"
 					aria-labelledby="help-nav-menu-btn"
 					cdkMenu
