--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -79,7 +79,7 @@
 						</button>
 						<ng-template #actionsMenu>
 							<div
-								class="dropdown-menu py-0"
+								class="dropdown-menu"
 								id="eua-{{ eua._id }}-action-menu"
 								attr.aria-labelledby="eua-{{ eua._id }}-action-menu-btn"
 								cdkMenu
