--- a/src/app/core/admin/messages/list-messages/list-messages.component.html
+++ b/src/app/core/admin/messages/list-messages/list-messages.component.html
@@ -60,7 +60,7 @@
 					</button>
 					<ng-template #actionsMenu>
 						<div
-							class="dropdown-menu py-0"
+							class="dropdown-menu"
 							id="message-{{ message._id }}-action-menu"
 							attr.aria-labelledby="message-{{ message._id }}-action-menu-btn"
 							cdkMenu
