--- a/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/list-cache-entries/list-cache-entries.component.html
@@ -29,51 +29,43 @@
 				</td>
 			</ng-container>
 			<asy-ago-date-column name="ts" header="Created"></asy-ago-date-column>
-			<ng-container cdkColumnDef="actionsMenu" stickyEnd>
-				<th cdk-header-cell *cdkHeaderCellDef></th>
-				<td cdk-cell *cdkCellDef="let entry; let i = index">
-					<button
-						class="btn dropdown-toggle dropdown-toggle-hide-caret shadow-none py-0 ps-3"
-						id="cache-entry-{{ entry._id }}-action-menu-btn"
-						type="button"
-						attr.aria-controls="cache-entry-{{ entry._id }}-action-menu"
-						[cdkMenuTriggerFor]="actionsMenu"
+			<asy-actions-menu-column scope="cache-entry" stickyEnd>
+				<ng-template
+					actions-menu-tmp
+					let-item="item"
+					let-menuId="menuId"
+					let-triggerId="triggerId"
+				>
+					<div
+						class="dropdown-menu"
+						[attr.aria-labelledby]="triggerId"
+						cdkMenu
+						[id]="menuId"
 					>
-						<span class="fa-solid fa-lg fa-ellipsis-v"></span>
-					</button>
-
-					<ng-template #actionsMenu>
-						<div
-							class="dropdown-menu"
-							id="cache-entry-{{ entry._id }}-action-menu"
-							attr.aria-labelledby="cache-entry-{{ entry._id }}-action-menu-btn"
-							cdkMenu
+						<button
+							class="dropdown-item"
+							cdkMenuItem
+							(cdkMenuItemTriggered)="viewCacheEntry(item)"
 						>
-							<button
-								class="dropdown-item"
-								cdkMenuItem
-								(cdkMenuItemTriggered)="viewCacheEntry(entry)"
-							>
-								View
-							</button>
-							<button
-								class="dropdown-item"
-								cdkMenuItem
-								(cdkMenuItemTriggered)="refreshCacheEntry(entry)"
-							>
-								Refresh
-							</button>
-							<button
-								class="dropdown-item"
-								cdkMenuItem
-								(cdkMenuItemTriggered)="confirmDeleteEntry(entry)"
-							>
-								Delete
-							</button>
-						</div>
-					</ng-template>
-				</td>
-			</ng-container>
+							View
+						</button>
+						<button
+							class="dropdown-item"
+							cdkMenuItem
+							(cdkMenuItemTriggered)="refreshCacheEntry(item)"
+						>
+							Refresh
+						</button>
+						<button
+							class="dropdown-item"
+							cdkMenuItem
+							(cdkMenuItemTriggered)="confirmDeleteEntry(item)"
+						>
+							Delete
+						</button>
+					</div>
+				</ng-template>
+			</asy-actions-menu-column>
 			<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
 			<tr cdk-row *cdkRowDef="let team; columns: displayedColumns"></tr>
 		</table>
