--- a/src/app/core/admin/user/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user/list-users/admin-list-users.component.html
@@ -96,45 +96,38 @@
 						<a [routerLink]="['/team', team._id]">{{ team.team.name }}</a>
 					</ng-template>
 				</asy-expandable-list-column>
-				<ng-container cdkColumnDef="actionsMenu" stickyEnd>
-					<th cdk-header-cell *cdkHeaderCellDef></th>
-					<td cdk-cell *cdkCellDef="let user">
-						<button
-							class="btn dropdown-toggle dropdown-toggle-hide-caret shadow-none py-0 ps-3"
-							id="user-{{ user._id }}-action-menu-btn"
-							type="button"
-							attr.aria-controls="user-{{ user._id }}-action-menu"
-							[cdkMenuTriggerFor]="actionsMenu"
+				<asy-actions-menu-column scope="user" stickyEnd>
+					<ng-template
+						actions-menu-tmp
+						let-item="item"
+						let-menuId="menuId"
+						let-triggerId="triggerId"
+					>
+						<div
+							class="dropdown-menu"
+							[attr.aria-labelledby]="triggerId"
+							cdkMenu
+							[id]="menuId"
 						>
-							<span class="fa-solid fa-lg fa-ellipsis-v"></span>
-						</button>
-						<ng-template #actionsMenu>
-							<div
-								class="dropdown-menu"
-								id="user-{{ user._id }}-action-menu"
-								attr.aria-labelledby="user-{{ user._id }}-action-menu-btn"
-								cdkMenu
+							<button
+								class="dropdown-item"
+								cdkMenuItem
+								[routerLink]="['/admin/user', item._id]"
 							>
-								<a
+								Edit
+							</button>
+							@if (allowDeleteUser()) {
+								<button
 									class="dropdown-item"
 									cdkMenuItem
-									[routerLink]="['/admin/user', user._id]"
+									(cdkMenuItemTriggered)="confirmDeleteUser(item)"
 								>
-									Edit
-								</a>
-								@if (allowDeleteUser()) {
-									<button
-										class="dropdown-item"
-										cdkMenuItem
-										(cdkMenuItemTriggered)="confirmDeleteUser(user)"
-									>
-										Delete
-									</button>
-								}
-							</div>
-						</ng-template>
-					</td>
-				</ng-container>
+									Delete
+								</button>
+							}
+						</div>
+					</ng-template>
+				</asy-actions-menu-column>
 				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns(); sticky: true"></tr>
 				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns()"></tr>
 			</table>
