--- a/src/app/common/table/columns/selection/asy-selection-column.component.html
+++ b/src/app/common/table/columns/selection/asy-selection-column.component.html
@@ -1,6 +1,6 @@
 <ng-container cdkColumnDef [sticky]="sticky" [stickyEnd]="stickyEnd">
 	<th cdk-header-cell *cdkHeaderCellDef>
-		@if (enableSelectAll && multi) {
+		@if (enableSelectAll() && multi()) {
 			<div class="form-check">
 				<input
 					class="form-check-input"
@@ -18,7 +18,7 @@
 			<input
 				class="form-check-input"
 				id="table-selected-{{ _isMultiTemplateDataRows ? dataIndex : index }}"
-				type="{{ multi ? 'checkbox' : 'radio' }}"
+				type="{{ multi() ? 'checkbox' : 'radio' }}"
 				[checked]="isSelected(_isMultiTemplateDataRows ? dataIndex : index, result)"
 				[disabled]="!isSelectable(_isMultiTemplateDataRows ? dataIndex : index, result)"
 				(change)="toggle(_isMultiTemplateDataRows ? dataIndex : index, result)"
