--- a/src/app/common/flyout/flyout.component.html
+++ b/src/app/common/flyout/flyout.component.html
@@ -1,13 +1,10 @@
-<section
-	class="flyout flyout-{{ placement }} d-flex text-nowrap"
-	[ngClass]="{ 'flyout-open': isOpen }"
->
+<section class="flyout flyout-{{ placement() }} d-flex text-nowrap" [class.flyout-open]="isOpen()">
 	<button
 		class="btn btn-primary flyout-btn d-flex align-items-center"
 		data-inline="true"
 		(click)="toggle()"
 	>
-		{{ label }}
+		{{ label() }}
 		<span class="fa-solid fa-lg fa-angle-down ms-2" data-inline="true"></span>
 	</button>
 
