--- a/src/app/common/notification/notification.component.html
+++ b/src/app/common/notification/notification.component.html
@@ -1,10 +1,10 @@
-<div class="alert alert-{{ notificationType }} d-flex" [class.small]="small">
-	<div class="flex-grow-1" [class.action-text]="showActions">
-		{{ message }}
+<div class="alert alert-{{ notificationType() }} d-flex" [class.small]="small()">
+	<div class="flex-grow-1" [class.action-text]="showActions()">
+		{{ message() }}
 	</div>
-	@if (showActions) {
+	@if (showActions() && actionTemplate()) {
 		<div class="table-actions d-flex">
-			<ng-container *ngTemplateOutlet="actionTemplate"></ng-container>
+			<ng-container *ngTemplateOutlet="actionTemplate() ?? null"></ng-container>
 		</div>
 	}
 </div>
