--- a/src/app/common/table/filter/asy-header-text-filter/asy-header-text-filter.component.html
+++ b/src/app/common/table/filter/asy-header-text-filter/asy-header-text-filter.component.html
@@ -2,29 +2,29 @@
 	class="dropdown-toggle dropdown-toggle-hide-caret"
 	cdkOverlayOrigin
 	#trigger
-	(click)="isOpen = !isOpen"
+	(click)="toggle()"
 >
 	<span
 		class="filter fa-solid fa-list"
 		container="body"
 		placement="bottom"
 		tooltip="Apply Filters"
-		[hidden]="isFiltered"
+		[hidden]="isFiltered()"
 	></span>
 	<span
 		class="filter fa-solid fa-filter"
 		container="body"
 		placement="bottom"
 		tooltip="Edit Filters"
-		[hidden]="!isFiltered"
+		[hidden]="!isFiltered()"
 	></span>
 </button>
 
 <ng-template
 	cdkConnectedOverlay
-	[cdkConnectedOverlayOpen]="isOpen"
+	[cdkConnectedOverlayOpen]="isOpen()"
 	[cdkConnectedOverlayOrigin]="trigger"
-	(overlayOutsideClick)="isOpen = false"
+	(overlayOutsideClick)="isOpen.set(false)"
 >
 	<div class="dropdown-menu d-flex flex-column" cdkTrapFocus cdkTrapFocusAutoCapture>
 		<div class="mt-3">
@@ -41,7 +41,7 @@
 		<div class="search mt-2 mb-3">
 			<asy-search-input
 				placeholder="Search..."
-				[search]="search"
+				[search]="search()"
 				(applySearch)="onSearchText($event)"
 			>
 			</asy-search-input>
