--- a/src/app/common/table/table-empty-state/asy-table-empty-state.component.html
+++ b/src/app/common/table/table-empty-state/asy-table-empty-state.component.html
@@ -1,14 +1,14 @@
-@if (dataSource.loading) {
-	<asy-skeleton-rows [rows]="dataSource.pageChangeEvent$.value.pageSize"></asy-skeleton-rows>
-} @else if (dataSource.pagingResults$.value.elements.length === 0) {
+@if (dataSource().loading) {
+	<asy-skeleton-rows [rows]="dataSource().pageChangeEvent$.value.pageSize"></asy-skeleton-rows>
+} @else if (dataSource().pagingResults$.value.elements.length === 0) {
 	<div class="d-flex justify-content-center py-5">
-		@if (dataSource.isFiltered) {
-			@if (showIcons) {
+		@if (dataSource().isFiltered) {
+			@if (showIcons()) {
 				<img src="/assets/images/empty-state/no-results.png" />
 			}
 			<div class="d-flex flex-column align-items-start">
-				<h3>{{ filteredText }}</h3>
-				@if (showClearFilters) {
+				<h3>{{ filteredText() }}</h3>
+				@if (showClearFilters()) {
 					<button
 						class="btn btn-primary px-4 mt-2"
 						type="button"
@@ -19,11 +19,11 @@
 				}
 			</div>
 		} @else {
-			@if (showIcons) {
+			@if (showIcons()) {
 				<img src="/assets/images/empty-state/no-data.png" />
 			}
 			<div class="d-flex flex-column align-items-start">
-				<h3>{{ emptyText }}</h3>
+				<h3>{{ emptyText() }}</h3>
 			</div>
 		}
 	</div>
