feat(help): Simplify help component setup
* Help component now use normal routing vs. dynamically creating components by topic param
* No longer requires registering help topics.  They can be discovered via router config.
* UI updates to help component

--- a/src/app/core/help/getting-started/getting-started-help.component.html
+++ b/src/app/core/help/getting-started/getting-started-help.component.html
@@ -22,7 +22,7 @@
 	</p>
 </div>
 
-<div class="callout callout-info">
+<div class="callout callout-info mb-0">
 	<h4>Looking for help?</h4>
 	<p>
 		Help is also located throughout the app. Whenever you see this icon:
@@ -39,8 +39,8 @@
 </div>
 
 @if (externalLinks().length > 0) {
-	<div>
-		<h2>External Resources</h2>
+	<div class="mt-3">
+		<h3>External Resources</h3>
 		<external-links [links]="externalLinks()"></external-links>
 	</div>
 }
