--- a/src/app/core/teams/help/teams-help.component.html
+++ b/src/app/core/teams/help/teams-help.component.html
@@ -17,13 +17,13 @@
 </p>
 
 <div class="mb-3 site-mb-3">
-	<label>Team Admin</label>
+	<h5>Team Admin</h5>
 	<p>
 		This role grants the user the ability to add/remove members of the team and to delete the
 		team itself. Team admins will receive access requests generated from within the UI.
 	</p>
 
-	<label>Team Editor</label>
+	<h5>Team Editor</h5>
 	<p>
 		This role grants the user the ability to create/edit/delete resources on behalf of the team.
 	</p>
